--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/karma": "^5.1.0",
+    "@hookform/resolvers": "^3.9.1",
     "@iconify/react": "^5.0.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -26,9 +27,11 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "twilio": "^5.2.2"
+    "twilio": "^5.2.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
