--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.13.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
